fix spacing and font sizes for profile page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -365,19 +365,23 @@ border: 1px solid #ccc;
 -webkit-box-shadow: 1px 1px 1px 0px #ccc;
 -moz-box-shadow:    1px 1px 1px 0px #ccc;
 box-shadow:         1px 1px 1px 0px #ccc;
-padding-top: 2em;
-padding-bottom: 2em;
+padding: 2em;
 }
 
+#advisor-profile-bio {
+  padding-left: 2em;
+}
 #advisor-profile-image {
   margin-bottom: 1em;
 }
 #advisor-name-profile-page {
   font-size: 3em;
+  margin-bottom: 0em;
 }
 
 #advisor-title-profile-page {
   font-size: 1.5em;
+  margin-bottom: 0em;
 }
 
 #profile-panel p {
@@ -385,13 +389,15 @@ padding-bottom: 2em;
 }
 .profile-subheader {
   font-family: "Open Sans";
-  font-size: 1em;
+  font-size: .9em;
   color: #43c7f4;
   letter-spacing: 1px;
+  margin-bottom: .5em;
 }
 
 .profile-info {
-  margin-bottom: 0em;
+  margin-bottom: .5em;
+  font-size: 1.1em;
 }
 
 .category-checkbox {
